Sunbeam styling and sticky fix 2
Html Overflow:hidden breaks all sticky, including navbar. Removed overflow in preparation for testing which element is too big

--- a/index.css
+++ b/index.css
@@ -29,11 +29,13 @@
     animation-timing-function: cubic-bezier(0.23, 1, 0.32, 1.2);
 }
 html,body{
-    overflow-x: hidden;
+    background: (var(--off-white));
+    /* overflow-x: clip; */
 }
 body{
     margin:0;
     overflow-y: auto;
+    overflow-x: hidden;
     width: 100%;
     height: 100%;
     padding: 0%;
@@ -327,6 +329,7 @@ img{
     opacity: 10%;
     mix-blend-mode: screen;
     animation: glow 10s infinite;
+    background-color: #000;
 }
 #landing-watcher img:nth-of-type(1){
     animation-delay: 1s;
